[package]
name = "game-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["openssl"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.7", features = [
        "postgres", 
        "runtime-tokio-native-tls",
        "uuid",
        "chrono"
    ]}
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }